# impact-career-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: first-user-apify-smoke.yml  first-user-google-smoke.yml  first-user-integrated-dry-run.yml  first-user-provider-smoke.yml  first-user-public-live-smoke.yml  first-user-smoke.yml  test.yml
career_agent/: __init__.py  demo.py  google_auth.py
career_agent/applications/: __init__.py  cover_letter.py  docx_cover_letter.py  docx_resume.py  packet_outputs.py  packets.py  pdf_converter.py  resume.py
career_agent/cli/: main.py
career_agent/core/: __init__.py  models.py
career_agent/llm/: __init__.py  providers.py
career_agent/scoring/: __init__.py  job_fit.py  signals.py
career_agent/sinks/: __init__.py  email.py  google_drive.py  google_sheets.py
career_agent/sources/: __init__.py  career_extraction.py  career_pages.py  job_descriptions.py  (+5 more)
docs/: ARCHITECTURE.md  ONBOARDING.md  RELEASE_CHECKLIST.md  V0_1_WORKPLAN.md
examples/: README.md  demo_config.yaml
tests/: test_application_generation.py  test_career_extraction.py  test_cli.py  test_demo.py  test_email_sink.py  test_google_auth.py  test_google_drive_sink.py  test_google_sheets_sink.py  test_job_descriptions.py  test_job_fit.py  test_linkedin_email_parser.py  test_live_source_boundaries.py  test_llm_providers.py  test_models.py  test_news_sources.py  test_opportunity_sources.py  test_signal_scoring.py  test_watchlist.py
(+11 files in other folders)
