[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-career-agent"
version = "0.1.0a0"
description = "Open-source agents for mission-driven career search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zhen Zeng", email = "zhenzeng@uchicago.edu" }]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
openai = [
  "openai>=1.0",
]
gemini = [
  "google-genai>=1.0,<2.0",
]
gmail = [
  "google-api-python-client>=2.0",
  "google-auth-oauthlib>=1.0",
]
apify = [
  "apify-client>=1.8",
]
career-pages = [
  "requests>=2.31",
  "trafilatura>=1.8",
]
docs = []

[project.scripts]
career-agent = "career_agent.cli.main:main"

[tool.setuptools.packages.find]
include = ["career_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
